# dayplan

./: README.md
src/: index.html  main.js  styles.css  tabs.js
src-tauri/: .gitignore  Cargo.toml  package.json  tauri.conf.json
src-tauri/src/: main.rs  models.rs  stats.rs
